// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__FiltersPanel___1IB15 src-shared-components-challenge-listing-Filters-FiltersPanel-___style__hidden___ezEQ0"
>
  <div
    className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__header___31Zc5"
  >
    <span
      className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__title___2WTz_"
    >
      Filters
    </span>
    <span
      className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__close-icon___1NDE7"
      onClick={[Function]}
      onKeyPress={[Function]}
    >
      <UiSimpleRemove
        className="cross"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </span>
  </div>
  <div
    className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filters___3QQHA src-shared-components-challenge-listing-Filters-FiltersPanel-___style__inGroup___20X1B"
  >
    <div
      className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter-row___1bgVX"
    >
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__keywords___Fbb9L"
      >
        <label
          className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__left-label___3VwT7"
          htmlFor="keyword-select"
        >
          Keywords
        </label>
        <Select
          id="keyword-select"
          multi={true}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "key",
                "value": "key",
              },
              Object {
                "label": "word",
                "value": "word",
              },
            ]
          }
          selectRef={[Function]}
          simpleValue={true}
          value={null}
        />
      </div>
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__community___Pvrf8"
      >
        <label
          htmlFor="community-select"
        >
          Sub community
        </label>
        <Select
          autoBlur={true}
          clearable={false}
          id="community-select"
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "label": <div>
                  Sample community
                </div>,
                "name": "Sample community",
                "value": "123",
              },
            ]
          }
          selectRef={[Function]}
          simpleValue={true}
          value="1"
          valueRenderer={[Function]}
        />
      </div>
    </div>
    <div
      className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter-row___1bgVX"
    >
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__track___3l63p"
      >
        <label
          className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__left-label___3VwT7"
          htmlFor="track-select"
        >
          Subtrack
        </label>
        <Select
          id="track-select"
          multi={true}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "sub",
                "value": "sub",
              },
              Object {
                "label": "track",
                "value": "track",
              },
            ]
          }
          selectRef={[Function]}
          simpleValue={true}
          value={null}
        />
      </div>
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__dates___2kvcW src-shared-components-challenge-listing-Filters-FiltersPanel-___style__hidetwomonthdatepicker___3B2mi"
      >
        <label
          htmlFor="date-range-picker-one-month"
        >
          Date range
        </label>
        <DateRangePicker
          id="date-range-picker-one-month"
          numberOfMonths={1}
          onDatesChange={[Function]}
          readOnly={true}
        />
      </div>
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__dates___2kvcW src-shared-components-challenge-listing-Filters-FiltersPanel-___style__hideonemonthdatepicker___3IoEN"
      >
        <label
          htmlFor="date-range-picker-two-months"
        >
          Date range
        </label>
        <DateRangePicker
          id="date-range-picker-two-months"
          numberOfMonths={2}
          onDatesChange={[Function]}
          readOnly={true}
        />
      </div>
    </div>
  </div>
  <div
    className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__buttons___1w3XU"
  >
    <ThemedButton
      active={false}
      composeAdhocTheme="deeply"
      composeContextTheme="softly"
      disabled={false}
      enforceA={false}
      mapThemrProps={[Function]}
      onClick={[Function]}
      onMouseDown={null}
      openNewTab={false}
      replace={false}
      size="sm"
      theme={
        Object {
          "button": undefined,
        }
      }
      themePriority="adhoc-default-context"
      to={null}
      type="button"
    >
      Clear filters
    </ThemedButton>
    <ThemedButton
      active={false}
      composeAdhocTheme="deeply"
      composeContextTheme="softly"
      disabled={true}
      enforceA={false}
      mapThemrProps={[Function]}
      onClick={[MockFunction]}
      onMouseDown={null}
      openNewTab={false}
      replace={false}
      size="sm"
      theme={
        Object {
          "button": undefined,
        }
      }
      themePriority="adhoc-context-default"
      to={null}
      type="button"
    >
      Save filter
    </ThemedButton>
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__FiltersPanel___1IB15"
>
  <div
    className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__header___31Zc5"
  >
    <span
      className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__title___2WTz_"
    >
      Filters
    </span>
    <span
      className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__close-icon___1NDE7"
      onClick={[Function]}
      onKeyPress={[Function]}
    >
      <UiSimpleRemove
        className="cross"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </span>
  </div>
  <div
    className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filters___3QQHA src-shared-components-challenge-listing-Filters-FiltersPanel-___style__inGroup___20X1B"
  >
    <div
      className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter-row___1bgVX"
    >
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__keywords___Fbb9L"
      >
        <label
          className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__left-label___3VwT7"
          htmlFor="keyword-select"
        >
          Keywords
        </label>
        <Select
          id="keyword-select"
          multi={true}
          onChange={[Function]}
          options={Array []}
          selectRef={[Function]}
          simpleValue={true}
          value={null}
        />
      </div>
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__community___Pvrf8"
      >
        <label
          htmlFor="community-select"
        >
          Sub community
        </label>
        <Select
          autoBlur={true}
          clearable={false}
          id="community-select"
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "label": <div>
                  Sample community
                </div>,
                "name": "Sample community",
                "value": "123",
              },
            ]
          }
          selectRef={[Function]}
          simpleValue={true}
          value="1"
          valueRenderer={[Function]}
        />
      </div>
    </div>
    <div
      className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter-row___1bgVX"
    >
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__track___3l63p"
      >
        <label
          className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__left-label___3VwT7"
          htmlFor="track-select"
        >
          Subtrack
        </label>
        <Select
          id="track-select"
          multi={true}
          onChange={[Function]}
          options={Array []}
          selectRef={[Function]}
          simpleValue={true}
          value={null}
        />
      </div>
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__dates___2kvcW src-shared-components-challenge-listing-Filters-FiltersPanel-___style__hidetwomonthdatepicker___3B2mi"
      >
        <label
          htmlFor="date-range-picker-one-month"
        >
          Date range
        </label>
        <DateRangePicker
          id="date-range-picker-one-month"
          numberOfMonths={1}
          onDatesChange={[Function]}
          readOnly={true}
        />
      </div>
      <div
        className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__filter___2Jca_ src-shared-components-challenge-listing-Filters-FiltersPanel-___style__dates___2kvcW src-shared-components-challenge-listing-Filters-FiltersPanel-___style__hideonemonthdatepicker___3IoEN"
      >
        <label
          htmlFor="date-range-picker-two-months"
        >
          Date range
        </label>
        <DateRangePicker
          id="date-range-picker-two-months"
          numberOfMonths={2}
          onDatesChange={[Function]}
          readOnly={true}
        />
      </div>
    </div>
  </div>
  <div
    className="src-shared-components-challenge-listing-Filters-FiltersPanel-___style__buttons___1w3XU"
  >
    <ThemedButton
      active={false}
      composeAdhocTheme="deeply"
      composeContextTheme="softly"
      disabled={false}
      enforceA={false}
      mapThemrProps={[Function]}
      onClick={[Function]}
      onMouseDown={null}
      openNewTab={false}
      replace={false}
      size="sm"
      theme={
        Object {
          "button": undefined,
        }
      }
      themePriority="adhoc-default-context"
      to={null}
      type="button"
    >
      Clear filters
    </ThemedButton>
    <ThemedButton
      active={false}
      composeAdhocTheme="deeply"
      composeContextTheme="softly"
      disabled={true}
      enforceA={false}
      mapThemrProps={[Function]}
      onClick={[MockFunction]}
      onMouseDown={null}
      openNewTab={false}
      replace={false}
      size="sm"
      theme={
        Object {
          "button": undefined,
        }
      }
      themePriority="adhoc-context-default"
      to={null}
      type="button"
    >
      Save filter
    </ThemedButton>
  </div>
</div>
`;
